[gd_scene load_steps=23 format=2]

[ext_resource path="res://PGEBase/PGEEditor/PGEEditor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/DialogueEditor/DialogueEditor.gd" type="Script" id=2]
[ext_resource path="res://src/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://src/DialogueNode/DialogueNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://PGEBase/PGENode/PGENodePanelNormal.tres" type="StyleBox" id=5]
[ext_resource path="res://PGEBase/PGENode/PGENodePanelSelected.tres" type="StyleBox" id=6]
[ext_resource path="res://src/Blocks/Text/TextBlock.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Blocks/Option/OptionBlock.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Blocks/Conditional/ConditionalBlock.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Blocks/Expression/ExpressionBlock.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Blocks/Skip/SkipBlock.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Blocks/Jump/JumpBlock.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/TestPanel/TestPanel.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/Montserrat-BoldItalic.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/fonts/Montserrat-MediumItalic.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.160784, 0.184314, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 17 )

[node name="DialogueEditor" instance=ExtResource( 1 )]
script = ExtResource( 2 )
graph_class = ExtResource( 3 )
pge_node_packed_scene = ExtResource( 4 )

[node name="FileDialog" parent="." index="0"]
current_dir = "/home/luizcarlos1405/Palco/Dev/Projetos/Spade"
current_path = "/home/luizcarlos1405/Palco/Dev/Projetos/Spade/"

[node name="TestButton" type="Button" parent="Header/Items" index="7"]
margin_left = 301.0
margin_right = 340.0
margin_bottom = 24.0
text = "Test"

[node name="VSeparator2" parent="Header/Items" index="8"]
margin_left = 344.0
margin_right = 348.0

[node name="ZoomOut" parent="Header/Items" index="9"]
margin_left = 352.0
margin_right = 380.0

[node name="ZoomReset" parent="Header/Items" index="10"]
margin_left = 384.0
margin_right = 412.0

[node name="ZoomIn" parent="Header/Items" index="11"]
margin_left = 416.0
margin_right = 444.0

[node name="Undo" parent="Header/Items" index="12"]
margin_left = 448.0
margin_right = 476.0

[node name="Redo" parent="Header/Items" index="13"]
margin_left = 480.0
margin_right = 508.0

[node name="ScrollContainer" parent="." index="2"]
custom_styles/bg = SubResource( 1 )

[node name="Start" parent="ScrollContainer/Panel/Nodes" index="0" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 69.2333
margin_top = 76.5639
margin_right = 198.233
margin_bottom = 134.564
slot_side = 0
stylebox_normal = ExtResource( 5 )
stylebox_selected = ExtResource( 6 )
can_be_deleted = false
can_be_renamed = false

[node name="PopupMenu" parent="ScrollContainer/Panel/Nodes/Start" index="0"]
items = [ "Swap slot side", null, 0, false, false, -1, 0, null, "", false, "Set as start node", null, 0, false, false, 1, 0, null, "", false ]

[node name="Parts" parent="ScrollContainer/Panel/Nodes/Start" index="1"]
margin_right = 123.0
margin_bottom = 52.0001

[node name="Header" parent="ScrollContainer/Panel/Nodes/Start/Parts" index="0"]
margin_right = 116.0

[node name="Name" parent="ScrollContainer/Panel/Nodes/Start/Parts/Header" index="1"]
margin_right = 116.0
text = "Start"

[node name="CloseButton" parent="ScrollContainer/Panel/Nodes/Start/Parts/Header" index="2"]
visible = false
margin_left = 72.0
margin_right = 88.0

[node name="Menu" parent="ScrollContainer/Panel/Nodes/Start/Parts" index="1"]
margin_right = 116.0

[node name="PGESlot" parent="ScrollContainer/Panel/Nodes/Start/Parts/Menu" index="0"]
normal_modulate = Color( 1, 1, 1, 1 )
disabled_modulate = Color( 1, 1, 1, 1 )

[node name="AddBlockButton" parent="ScrollContainer/Panel/Nodes/Start/Parts/Menu" index="1"]
margin_right = 116.0
items = [ "Text", null, 0, false, false, 0, 0, ExtResource( 7 ), "", false, "Option", null, 0, false, false, 1, 0, ExtResource( 8 ), "", false, "Conditional", null, 0, false, false, 2, 0, ExtResource( 9 ), "", false, "Expression", null, 0, false, false, 3, 0, ExtResource( 10 ), "", false, "Skip", null, 0, false, false, 4, 0, ExtResource( 11 ), "", false, "Jump", null, 0, false, false, 5, 0, ExtResource( 12 ), "", false ]

[node name="CollapsedSlot" parent="ScrollContainer/Panel/Nodes/Start/Parts/Menu" index="2"]
mode = 0
tangent_x_direction = 0
max_connections = 1
normal_modulate = Color( 1, 1, 1, 1 )
disabled_modulate = Color( 1, 1, 1, 1 )

[node name="Blocks" parent="ScrollContainer/Panel/Nodes/Start/Parts" index="2"]
margin_right = 116.0

[node name="TestPanel" type="PopupPanel" parent="." index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -203.5
margin_right = 309.0
margin_bottom = 203.5
script = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="TestPanel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="TestPanel/VBoxContainer" index="0"]
margin_right = 602.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )

[node name="Options" type="VBoxContainer" parent="TestPanel/VBoxContainer" index="1"]
margin_top = 184.0
margin_right = 602.0
margin_bottom = 348.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Restart" type="Button" parent="TestPanel/VBoxContainer" index="2"]
margin_top = 368.0
margin_right = 602.0
margin_bottom = 390.0
text = "RESTART"

[editable path="ScrollContainer/Panel/Nodes/Start"]
